--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,10 @@
               <span class="heading-primary">Soft skills for</span>
               <span class="heading-primary--sub">it</span>
             </h1>
-            <p class="first-screen__title">Образовательный уикенд в Университете Иннополис
+            <p class="first-screen__title u-center-text">Образовательный уикенд в Университете Иннополис
                 <span class="first-screen__title--sub">16-17 ноября 2018</span>
             </p>
-            <a class="btn--arrow" href="#">
+            <a class="btn--arrow u-center-text" href="#second-screen">
               <svg class="btn__arrow-svg" style="fill:#ffffff;" x="0px" y="0px" width="38.417px" height="18.592px" viewBox="0 0 38.417 18.592">
                 <g>
                   <path d="M19.208,18.592c-0.241,0-0.483-0.087-0.673-0.261L0.327,1.74c-0.408-0.372-0.438-1.004-0.066-1.413c0.372-0.409,1.004-0.439,1.413-0.066L19.208,16.24L36.743,0.261c0.411-0.372,1.042-0.342,1.413,0.066c0.372,0.408,0.343,1.041-0.065,1.413L19.881,18.332C19.691,18.505,19.449,18.592,19.208,18.592z"> </path>
@@ -45,40 +45,49 @@
             </a>
           </div>
         </section>
-        <section class="second-screen soft-skills col-1-of-2">
-          <div class="soft-skills__photo"></div>
-          <div class="soft-skills__defenition defenition">
-            <span class="defenition__header">Soft Skills — как это работает?</span>
-            <p class="defenition__text">Уровень развития «гибких навыков» или «мягких компетенций» (soft skills) часто важнее, чем узкие технические навыки (hard skills).</p>
-            <p class="defenition__text">Soft skills — набор надпрофессиональных компетенций: целеполагание, самопрезентация, деловая коммуникация, умение работать в команде, лидерство и эмоциональный интеллект.</p>
-            <p class="defenition__text">Набор soft skills влияет на широту профессионального выбора: чем больше компетенций развито у человека, тем больше вариантов профессионального развития возможно в будущем.</p>
-            <blockquote class="defenition__blockquote">
-              Грамотный набор soft skills в сочетании с высоким интеллектом — это «резюме» сотрудника XXI века.
-              <cite class="defenition__cite"> forbes</cite>
-            </blockquote>
+        <section class="second-screen u-padding-big">
+          <a name="second-screen"></a>
+          <div class="second-screen__wrapper soft-skills row">
+            <div class="col-1-of-2 soft-skills__photos">
+              <div class="soft-skills__photo"></div>
+              <div class="row">
+                <div class="col-1-of-2 soft-skills__photo-min soft-skills__photo-min--2"></div>
+                <div class="col-1-of-2 soft-skills__photo-min soft-skills__photo-min--3"></div>
+              </div>
+            </div>
+            <div class="col-1-of-2 soft-skills__defenition defenition">
+              <span class="defenition__header">Soft Skills — как это работает?</span>
+              <p class="defenition__text">Уровень развития «гибких навыков» или «мягких компетенций» (soft skills) часто важнее, чем узкие технические навыки (hard skills).</p>
+              <p class="defenition__text">Soft skills — набор надпрофессиональных компетенций: целеполагание, самопрезентация, деловая коммуникация, умение работать в команде, лидерство и эмоциональный интеллект.</p>
+              <p class="defenition__text">Набор soft skills влияет на широту профессионального выбора: чем больше компетенций развито у человека, тем больше вариантов профессионального развития возможно в будущем.</p>
+              <blockquote class="defenition__blockquote">
+                Грамотный набор soft skills в сочетании с высоким интеллектом — это «резюме» сотрудника XXI века.
+                <cite class="defenition__cite"> forbes</cite>
+              </blockquote>
+            </div>
           </div>
         </section>
         <section class="third-screen features">
           <h2 class="features__header">Результаты</h2>
           <p class="features__text">Программа позволит приобрести и развить навыки, необходимые для эффективного управления ИТ-проектами.</p>
-          <ul class="features__list col-1-of-4">
-            <li class="features__item">
-              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="512px" height="512px"> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
+          <ul class="row features__list">
+            <li class="col-1-of-4 features__item">
+              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="" height=""> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
               </svg></icon>
               <p class="features__description">Получите целостное системное понимание набора компетенций, относящихся к soft skills</p>
             </li>
-            <li class="features__item">
-              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="512px" height="512px"> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
+            <li class="col-1-of-4 features__item">
+              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="" height=""> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
               </svg></icon>
               <p class="features__description">Узнаете о важных критериях отбора людей при формировании команды</p>
             </li>
-            <li class="features__item">
-              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="512px" height="512px"><g><g><path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
+            <li class="col-1-of-4 features__item">
+              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="" height=""><g><g><path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
               </svg></icon>
               <p class="features__description">Поймете, как построить эффективные коммуникации внутри коллектива</p>
             </li>
             <li class="features__item">
-              <icon class="features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="512px" height="512px"> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
+              <icon class="col-1-of-4 features__icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve" width="" height=""> <g> <g> <path d="M0,437.825v-345.6c0-13.5,10.9-24.4,24.4-24.4h255.1h51.3l-48.7,48.7h-2.6H48.7v296.9h296.9v-53.3v-72.8l48.7-48.7v121.5 v77.7c0,13.4-10.9,24.4-24.4,24.4H24.4C10.9,462.225,0,451.325,0,437.825z M212.1,250.825l-52-52c-14.6-14.6-38.3-14.6-52.9,0 c-7.1,7.1-11,16.5-11,26.5s3.9,19.4,11,26.4l78.4,78.4c14.6,14.6,38.3,14.6,52.9,0L478,90.625c7.1-7.1,11-16.5,11-26.4 c0-10-3.9-19.4-11-26.5c-14.6-14.6-38.3-14.6-52.9,0L212.1,250.825z" fill="#FFFFFF"></path></g></g>
               </svg></icon>
               <p class="features__description">Повысите навыки публичных выступлений для решения управленческих задач</p>
             </li>
